projects/compiler/test/typechecker/return/error_type_mismatch.2.out
Error at %FILE_NAME%:1:22
Return type mismatch for function 'foo'
  |  func foo(): Int? = Ok(1)
                          ^
Expected Int?
but instead found Result<Int, <unknown>>
